# cookiecutter-datascience

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__repo_name }}/: .env.template  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
